--- a/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
+++ b/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
@@ -94,7 +94,8 @@
                     <li id="dark-mode-toggle">
                         {{ partial "helper/icon" "toggle-left" }}
                         {{ partial "helper/icon" "toggle-right" }}
-                        <span>{{ T "darkMode" }}</span>
+                        <span class="dark-mode-text">{{ T "darkMode" }}</span>
+                        <span class="light-mode-text">{{ T "lightMode" }}</span>
                     </li>
                 {{ end }}
             </ol>
